fix:白名单proto文件
