# wafconsole/api/wafTop/v1/allowList.pb.go
@@ -1,0 +1,131 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.34.2
+// 	protoc        v4.25.2
+// source: api/wafTop/v1/allowList.proto
+
+package v1
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+var File_api_wafTop_v1_allowList_proto protoreflect.FileDescriptor
+
+var file_api_wafTop_v1_allowList_proto_rawDesc = []byte{
+	0x0a, 0x1d, 0x61, 0x70, 0x69, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f, 0x76, 0x31, 0x2f,
+	0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12,
+	0x0d, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x1a, 0x1c,
+	0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74,
+	0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1b, 0x61, 0x70,
+	0x69, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f, 0x76, 0x31, 0x2f, 0x6d, 0x65, 0x73, 0x73,
+	0x61, 0x67, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xf9, 0x04, 0x0a, 0x09, 0x41, 0x6c,
+	0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x7e, 0x0a, 0x0f, 0x43, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x25, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x23, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76,
+	0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73,
+	0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x3a, 0x01,
+	0x2a, 0x22, 0x14, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f, 0x76,
+	0x31, 0x2f, 0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x12, 0x7e, 0x0a, 0x0f, 0x55, 0x70, 0x64, 0x61, 0x74,
+	0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x25, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61, 0x74,
+	0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x23, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76,
+	0x31, 0x2e, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73,
+	0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x3a, 0x01,
+	0x2a, 0x32, 0x14, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f, 0x76,
+	0x31, 0x2f, 0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x12, 0x7b, 0x0a, 0x0f, 0x44, 0x65, 0x6c, 0x65, 0x74,
+	0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x25, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74,
+	0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x23, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76,
+	0x31, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73,
+	0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x2a, 0x14,
+	0x2f, 0x61, 0x70, 0x70, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f, 0x76, 0x31, 0x2f, 0x61,
+	0x6c, 0x6c, 0x6f, 0x77, 0x12, 0x77, 0x0a, 0x0c, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x6f, 0x77,
+	0x4c, 0x69, 0x73, 0x74, 0x12, 0x22, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f,
+	0x70, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73,
+	0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x77,
+	0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x6f,
+	0x77, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x21, 0x82, 0xd3, 0xe4, 0x93,
+	0x02, 0x1b, 0x12, 0x19, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f,
+	0x76, 0x31, 0x2f, 0x61, 0x6c, 0x6c, 0x6f, 0x77, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x76, 0x0a,
+	0x0d, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x23,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x2e, 0x4c,
+	0x69, 0x73, 0x74, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73, 0x74, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70,
+	0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x6c, 0x6c, 0x6f, 0x77, 0x4c, 0x69, 0x73,
+	0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15,
+	0x2f, 0x61, 0x70, 0x70, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f, 0x76, 0x31, 0x2f, 0x61,
+	0x6c, 0x6c, 0x6f, 0x77, 0x73, 0x42, 0x2e, 0x0a, 0x0d, 0x61, 0x70, 0x69, 0x2e, 0x77, 0x61, 0x66,
+	0x54, 0x6f, 0x70, 0x2e, 0x76, 0x31, 0x50, 0x01, 0x5a, 0x1b, 0x77, 0x61, 0x66, 0x63, 0x6f, 0x6e,
+	0x73, 0x6f, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x77, 0x61, 0x66, 0x54, 0x6f, 0x70, 0x2f,
+	0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var file_api_wafTop_v1_allowList_proto_goTypes = []any{
+	(*CreateAllowListRequest)(nil), // 0: api.wafTop.v1.CreateAllowListRequest
+	(*UpdateAllowListRequest)(nil), // 1: api.wafTop.v1.UpdateAllowListRequest
+	(*DeleteAllowListRequest)(nil), // 2: api.wafTop.v1.DeleteAllowListRequest
+	(*GetAllowListRequest)(nil),    // 3: api.wafTop.v1.GetAllowListRequest
+	(*ListAllowListRequest)(nil),   // 4: api.wafTop.v1.ListAllowListRequest
+	(*CreateAllowListReply)(nil),   // 5: api.wafTop.v1.CreateAllowListReply
+	(*UpdateAllowListReply)(nil),   // 6: api.wafTop.v1.UpdateAllowListReply
+	(*DeleteAllowListReply)(nil),   // 7: api.wafTop.v1.DeleteAllowListReply
+	(*GetAllowListReply)(nil),      // 8: api.wafTop.v1.GetAllowListReply
+	(*ListAllowListReply)(nil),     // 9: api.wafTop.v1.ListAllowListReply
+}
+var file_api_wafTop_v1_allowList_proto_depIdxs = []int32{
+	0, // 0: api.wafTop.v1.AllowList.CreateAllowList:input_type -> api.wafTop.v1.CreateAllowListRequest
+	1, // 1: api.wafTop.v1.AllowList.UpdateAllowList:input_type -> api.wafTop.v1.UpdateAllowListRequest
+	2, // 2: api.wafTop.v1.AllowList.DeleteAllowList:input_type -> api.wafTop.v1.DeleteAllowListRequest
+	3, // 3: api.wafTop.v1.AllowList.GetAllowList:input_type -> api.wafTop.v1.GetAllowListRequest
+	4, // 4: api.wafTop.v1.AllowList.ListAllowList:input_type -> api.wafTop.v1.ListAllowListRequest
+	5, // 5: api.wafTop.v1.AllowList.CreateAllowList:output_type -> api.wafTop.v1.CreateAllowListReply
+	6, // 6: api.wafTop.v1.AllowList.UpdateAllowList:output_type -> api.wafTop.v1.UpdateAllowListReply
+	7, // 7: api.wafTop.v1.AllowList.DeleteAllowList:output_type -> api.wafTop.v1.DeleteAllowListReply
+	8, // 8: api.wafTop.v1.AllowList.GetAllowList:output_type -> api.wafTop.v1.GetAllowListReply
+	9, // 9: api.wafTop.v1.AllowList.ListAllowList:output_type -> api.wafTop.v1.ListAllowListReply
+	5, // [5:10] is the sub-list for method output_type
+	0, // [0:5] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_wafTop_v1_allowList_proto_init() }
+func file_api_wafTop_v1_allowList_proto_init() {
+	if File_api_wafTop_v1_allowList_proto != nil {
+		return
+	}
+	file_api_wafTop_v1_message_proto_init()
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_api_wafTop_v1_allowList_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   0,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_wafTop_v1_allowList_proto_goTypes,
+		DependencyIndexes: file_api_wafTop_v1_allowList_proto_depIdxs,
+	}.Build()
+	File_api_wafTop_v1_allowList_proto = out.File
+	file_api_wafTop_v1_allowList_proto_rawDesc = nil
+	file_api_wafTop_v1_allowList_proto_goTypes = nil
+	file_api_wafTop_v1_allowList_proto_depIdxs = nil
+}
